--- a/Quantitative_Analyst_Assessment_2021.ipynb
+++ b/Quantitative_Analyst_Assessment_2021.ipynb
@@ -312,7 +312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Question 3 - Data Manipulation\n",
+    "# Question 3 - Data Manipulation test\n",
     "At Purpose Investments, we have a public REST API for our fund data. The following example shows how to get the data for the Purpose Core Dividend Fund (symbol `PDF`) in Python. Please write the function `get_funds_latest_nav` to retrieve the lastest NAV of all the fund series, given a list of fund tickers"
    ]
   },
